--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
-PORT=4000
-MONGODB_URL=mongodb+srv://mohammadsibtainraza12:RBAC123@cluster0.eykvq.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
-JWT_SECRETE=RBAC123
+PORT="local host port no"
+MONGODB_URL="mongo db url"
+JWT_SECRETE="token secret"
